Added docker + dummy

--- a/dns/Dockerfile
+++ b/dns/Dockerfile
@@ -1,3 +1,12 @@
-FROM eclipse-temurin:17-jdk-jammy
+FROM maven:3-eclipse-temurin-17
 
 WORKDIR /app
+
+COPY ./dns/DNS/pom.xml .
+RUN mvn dependency:go-offline
+
+COPY ./dns/DNS .
+
+RUN mvn package
+
+ENTRYPOINT ["java", "-jar", "target/DNS-1.0-SNAPSHOT-jar-with-dependencies.jar"]
