--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       dockerfile: ./TimeClient/Dockerfile
     volumes:
       - type: bind
-        source: ./TimeClient/TimeClient
-        target: /app
+        source: ./compiled_jars
+        target: /app/compiled_jars
 
   daytime-server:
     container_name: daytime-server
@@ -49,8 +49,8 @@ services:
       dockerfile: ./DayTimeClient/Dockerfile
     volumes:
       - type: bind
-        source: ./DayTimeClient/DayTimeClient
-        target: /app
+        source: ./compiled_jars
+        target: /app/compiled_jars
 
   dummy:
     container_name: dummy
@@ -73,8 +73,7 @@ services:
         ipv4_address: 172.16.0.2
     command: sh -c "echo 'nameserver 172.16.0.1' > /etc/resolv.conf && tail -f /dev/null"
     volumes:
-      - ./TimeClient/TimeClient/target:/app/TimeClient
-      - ./DayTimeClient/DayTimeClient/target:/app/DayTimeClient
+      - ./compiled_jars:/app
 
 networks:
   net1:
